Actual Version
**************

-- Version 1.0.1 --------------
	• Included spanish translation

###########################################################################
Past Versions
*************

-- Version 1.0.0 --------------
	• First implementation for 3.1
	• Implemented workaround for missing events