@@ -4,7 +4,7 @@
 	"description": "Advances the core poll system of phpBB with new features like hiding votes till end, showing poll voters, limiting the votes and more.",
 	"homepage": "http://pinkes-forum.de/dev/find.php?ext=advancedpolls",
 	"version": "1.0.1",
-	"time": "2014-12-30",
+	"time": "2015-01-06",
 	"keywords": ["phpbb", "extension", "advancedpolls", "advanced", "poll"],
 	"license": "GPL-2.0",
 	"authors": [
