@@ -3,7 +3,7 @@
  * 
  * Advanced Polls [Deutsch]
  * 
- * @copyright (c) 2014 Wolfsblvt ( www.pinkes-forum.de )
+ * @copyright (c) 2015 Wolfsblvt ( www.pinkes-forum.de )
  * @license http://opensource.org/licenses/gpl-2.0.php GNU General Public License v2
  * @author Clemens Husung (Wolfsblvt)
  */
@@ -37,7 +37,7 @@ if (empty($lang) || !is_array($lang))
 $lang = array_merge($lang, array(
 	'ADVANCEDPOLLS_EXT_NAME'				=> 'Advanced Polls',
 
-	'AP_VOTES_HIDDEN'						=> 'Abstimmungen vergorgen',
+	'AP_VOTES_HIDDEN'						=> 'Abstimmungen verborgen',
 	'AP_POLL_RUN_TILL_APPEND'				=> ' Bis zu diesem Zeitpunkt werden alle Abstimmungen verborgen.',
 	'AP_VOTERS'								=> 'Benutzer, die abgestimmt haben',
 	'AP_NONE'								=> 'Keine',
