@@ -1,7 +1,7 @@
 <?php
 /**
  * 
- * Advanced Polls [English]
+ * Advanced Polls [French]
  * 
  * @copyright (c) 2015 Wolfsblvt ( www.pinkes-forum.de )
  * @license http://opensource.org/licenses/gpl-2.0.php GNU General Public License v2
@@ -36,22 +36,22 @@ if (empty($lang) || !is_array($lang))
 
 $lang = array_merge($lang, array(
 	'AP_TITLE_ACP'					=> 'Advanced Polls',
-	'AP_SETTINGS_ACP'				=> 'Settings',
+	'AP_SETTINGS_ACP'				=> 'Paramètres',
 
 	'AP_TITLE'						=> 'Advanced Polls',
 	'AP_TITLE_EXPLAIN'				=> 'Advances the core poll system of phpBB with new features like hiding votes till end, showing poll voters, limiting the votes and more.',
 	'AP_COPYRIGHT'					=> '© 2015 Wolfsblvt (www.pinkes-forum.de) [<a href="http://pinkes-forum.de/dev/find.php">More extensions of Wolfsblvt</a>]',
 
-	'AP_SETTINGS'					=> 'Advanced Polls Settings',
+	'AP_SETTINGS'					=> 'Paramètres Advanced Polls ',
 
-	'AP_ACT_VOTES_HIDE'				=> 'Activate hide votes',
-	'AP_ACT_VOTES_HIDE_EXPLAIN'		=> 'Activates the option to choose that poll votes are hidden until the poll ends.',
-	'AP_ACT_VOTERS_SHOW'			=> 'Activate show voters',
-	'AP_ACT_VOTERS_SHOW_EXPLAIN'	=> 'Activates the option to choose that poll voters are displayed for each poll option.',
-	'AP_ACT_VOTERS_LIMIT'			=> 'Activate limit voters',
-	'AP_ACT_VOTERS_LIMIT_EXPLAIN'	=> 'Activates the option to choose to limit voter for a poll to users that have already posted in this topic.',
+	'AP_ACT_VOTES_HIDE'				=> 'Activer le masquage des votes',
+	'AP_ACT_VOTES_HIDE_EXPLAIN'		=> 'Active l\'option permettant de masquer les votes jusqu\'à ce que le sondage se termine.',
+	'AP_ACT_VOTERS_SHOW'			=> 'Activer l\'affichage du nom des votants',
+	'AP_ACT_VOTERS_SHOW_EXPLAIN'	=> 'Active l\'option permettant d\'afficher le nom des votants pour chaque option (choix) du sondage.',
+	'AP_ACT_VOTERS_LIMIT'			=> 'Activer la limitation de possibilité de vote',
+	'AP_ACT_VOTERS_LIMIT_EXPLAIN'	=> 'Active l\'option permettant de limiter la possibilité de voter uniquement aux utilisateurs ayants participé au moins une fois au sujet.',
 
-	'AP_DEFAULT_VOTES_HIDE'			=> 'Selected default for hide votes',
-	'AP_DEFAULT_VOTERS_SHOW'		=> 'Selected default for show voters',
-	'AP_DEFAULT_VOTERS_LIMIT'		=> 'Selected default for limit voters',
+	'AP_DEFAULT_VOTES_HIDE'			=> 'Paramètre par défaut pour le masquage des votes',
+	'AP_DEFAULT_VOTERS_SHOW'		=> 'Paramètre par défaut pour l\'affichage du nom des votants',
+	'AP_DEFAULT_VOTERS_LIMIT'		=> 'Paramètre par défaut pour la limitation de possibilité de vote',
 ));
