@@ -1,7 +1,7 @@
 <?php
 /**
  * 
- * Advanced Polls [Deutsch]
+ * Advanced Polls [French]
  * 
  * @copyright (c) 2015 Wolfsblvt ( www.pinkes-forum.de )
  * @license http://opensource.org/licenses/gpl-2.0.php GNU General Public License v2
@@ -43,5 +43,5 @@ if (empty($lang) || !is_array($lang))
 
 // User Permissions
 $lang = array_merge($lang, array(
-	'ACL_U_SEE_VOTERS'			=> 'Kann die Benutzer sehen, abgestimmt haben, wenn aktiviert',
+	'ACL_U_SEE_VOTERS'			=> 'Peut voir le nom des votants si activé',
 ));
