@@ -2,7 +2,7 @@
  * 
  * Advanced Polls
  * 
- * @copyright (c) 2014 Wolfsblvt ( www.pinkes-forum.de )
+ * @copyright (c) 2015 Wolfsblvt ( www.pinkes-forum.de )
  * @license http://opensource.org/licenses/gpl-2.0.php GNU General Public License v2
  * @author Clemens Husung (Wolfsblvt)
  */
@@ -15,4 +15,8 @@ fieldset.polls dl.poll_voters_box {
 }
 span.poll_vote_notice {
 	display: block;
+}
+
+dd label {
+	white-space: normal !important;
 }
