@@ -2,7 +2,9 @@ Actual Version
 **************
 
 -- Version 1.0.1 --------------
-	• Included spanish translation
+	• Included spanish, french and swedish translation
+	• Fixed clipping issue in options on small resolution
+	• Typo in language files
 
 ###########################################################################
 Past Versions
